assets/less/base/ui/posts.less
@user-image-size: 76px;
@user-image-size-small: 32px;

@default-padding: 12px;
@minor-padding: 6px;

@column-width: 40em;

.post {
	width: 92%; // magic, due to magic 92% further above in the DOM.

	display: inline-block;
	float: left;
	clear: both;

	padding: @default-padding;
	padding-left: 0;

	// this should really be dealt with once and for all in the userimage
	// directive.
	.userimg {
		float: left;
		display: inline-block;
		vertical-align: top;
		width:  @user-image-size;
		height: @user-image-size;
		padding-right: @default-padding;
	}

	.meta {
		strong ~ span .fa { color: @linkColor; }
		span, strong {
			white-space: nowrap;
		}
		strong:first-of-type {
			padding-right: @minor-padding;
		}
		span strong:first-of-type {
			padding-left: @minor-padding;
		}
	}

	.content {
		max-width: @column-width;
		padding-left: @default-padding;
		margin-top: 0;
		margin-bottom: 0;
		margin-left: @user-image-size;
		word-wrap: break-word;
	}

	.date, .action {
		.detail-text();

	}
	.action {
		cursor: pointer;
	}

	@media @mobile {
		.actions .date:after { content: '\a' ; white-space: pre; }
	}
	.comments, .actions, .postImages {
		padding-left: @default-padding;
		margin-left: @user-image-size;
	}

	.moreImages {
		width: ~"calc(100% - 5px)";
	}

	.postImages {
		width: 36em;
		margin-top: 5px;
	}

	.postImageWrap:only-child {
		max-height: 18em;
	}
	
	.postImageWrap:only-child .postImage {
		width: auto;
	}

	.postImageWrap {
		height: 9em;
		width: ~"calc(50% - 5px)";
		display: inline-block;
		margin: 0 5px 5px 0;
		
		cursor: pointer;
	}
	
	.postImage {
		max-height: 100%;
		width: 100%;
	}

	.comments {
		max-width: @column-width;

		@media @mobile {
			padding-left: @default-padding;
			margin-left: @user-image-size - @user-image-size-small - @default-padding;
		}

		ul {
			margin: 0;
			padding: 0;
			// this would be a sane global default.
			list-style-type: none;
			li {
				padding-top: @default-padding;
				&:last-of-type {
					padding-bottom: @default-padding;
				}
			}
		}

		.userimg {
			width:  @user-image-size-small;
			height: @user-image-size-small;
		}

		.content, .meta {
			margin-left: @user-image-size-small;
		}

		.meta {
			padding-left: @default-padding;
		}

		textarea { width: 100%; }

		button {
			margin-top: 6px;
			float: right;
		}
	}

	.post-comments-loading {
		width: 50%;
		text-align: center;
	}
}

